--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/passport": "^10.1",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "paypal/rest-api-sdk-php": "^1.14",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
